fix(youtube): readablity (#250)

--- a/styles/youtube/catppuccin.user.css
+++ b/styles/youtube/catppuccin.user.css
@@ -516,7 +516,7 @@
 
     .ytp-right-controls svg path,
     .ytp-svg-fill {
-      fill: if(@lookup = latte, #000, #fff) !important;
+      fill: #fff !important;
     }
 
     .ytp-time-current,
@@ -524,7 +524,7 @@
     .ytp-time-duration,
     .ytp-menu-label-secondary,
     .ytp-menuitem-label-count {
-      color: if(@lookup = latte, #000, #fff);
+      color: #fff;
     }
 
     .ytp-tooltip:not([aria-hidden="true"]) {
